# siat-mcp

./: .gitignore  .gitignore.rej  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml  server.py
.claude/: settings.local.json
