[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siat-mcp"
version = "0.1.0"
description = "MCP server for siat.stat.uz — National Statistics Committee of Uzbekistan"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
siat-mcp = "server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["."]
