[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siat-mcp"
version = "0.3.0"
description = "MCP server for Uzbekistan official statistics — siat.stat.uz and nsdp.stat.uz"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "orjson>=3.9.0",
    "cachetools>=5.3.0",
    "asyncache>=0.3.1",
]

[project.scripts]
siat-mcp = "server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["."]
